[package]
authors = ["Huo Linhe <huolinhe@berrygenomics.com>"]
description = "Small bits value (e.g. 1,2.. bits) vector implementation."
documentation = "http://zitsen.github.io/nbits_vec.rs"
homepage = "https://github.com/zitsen/nbits_vec.rs"
keywords = ["nbits", "bits-vec", "data-structure", "small-bits", "vector"]
license = "MIT"
name = "nbits_vec"
readme = "README.md"
repository = "https://github.com/zitsen/nbits_vec.rs.git"
version = "0.1.1"

[dependencies]
num = "^0.1.31"
typenum = "^1.3.0"
